feat: implemented the button click events for the game to work: git push

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button id="paper">Paper</button>
     <button id="scissors" class="usefulBtn">Scissors</button>
 
-    <p id="result">Hey, you are the winner!</p>
+    <p id="result">You are the winner!</p>
     <script src="./src/scripts/rockPaperScissors.js"></script>
 
     
